# libhand

./: .travis.yml  CMakeLists.txt  INSTALL.txt  README.md  README.txt  appveyor.yml  license.txt
docs/build_instructions/debian/: BUILD.DEBIAN.md
docs/build_instructions/macos/: BUILD.MACOS.md
docs/build_instructions/windows/: BUILD.WINDOWS.md  download_and_build.sh
examples/: CMakeLists.txt  bend_one_finger.cc  file_dialog_test.cc  ogre_rendering_test.cc  render_hog_descriptor.cc
hand_cpp/: CMakeLists.txt
hand_cpp/settings/: project_variables
hand_cpp/source/: CMakeLists.txt  LibHandConfig.cmake.in  copts_stricter_warnings.cmake  error_handling.cc  error_handling.h  file_dialog.cc  file_dialog.h  file_tools.cc  file_tools.h  hand_camera_spec.cc  hand_camera_spec.h  hand_pose.cc  hand_pose.h  hand_prereq.h  hand_renderer.cc  hand_renderer.h  hog_cell.cc  hog_cell.h  hog_cell_rectangles.cc  hog_cell_rectangles.h  hog_descriptor.cc  hog_descriptor.h  hog_utils.cc  hog_utils.h  image_to_hog_calculator.cc  image_to_hog_calculator.h  image_utils.cc  image_utils.h  mac_app_loop.h  mac_app_loop.mm  pose_designer.cc  pose_designer.h  pose_designer_main.cc  printfstring.cc  printfstring.h  scene_spec.cc  scene_spec.h  simple_slider.cc  simple_slider.h  text_printer.cc  (+1 more)
hand_cpp/source/dot_sceneloader/: CMakeLists.txt  dot_sceneloader.cc  dot_sceneloader.h
hand_cpp/source/dot_sceneloader/tinyxml/: CMakeLists.txt
hand_matlab/: README.txt  mex_compile.sh
hand_matlab/examples/: add_paths.m  hand_model  interpolate_poses.m  poses  simple_render.m
hand_matlab/source/: hand_system.cc  hand_system_data.cc  hand_system_data.h  marin_mexutil.cc  marin_mexutil.h
hand_model/: scene_spec.yml
hand_model/ogre/: blackness.material  hand.mesh  hand.scene  hand.skeleton  hand_model_license.txt  skin.material
install_help/linux_ogre_static_installer/: README  install_config.sh  install_ogre_static.sh
install_help/linux_ogre_static_installer/patches/: FindOGRE.cmake.patch
poses/: a_ok.yml  fist.yml  pointing_finger.yml  relaxed.yml  rock_on.yml  stop_it.yml  thumbs_up.yml  vulcan_salute.yml
